--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "db:import": "node src/seed/index.seed.js -i",
+    "db:delete": "node src/seed/index.seed.js -d"
   },
   "type": "module",
   "repository": {
